// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`enroll-profile-with-password should add new field to view and remove it from the payload before submission 1`] = `
<div>
  <div
    class="MuiScopedCssBaseline-root emotion-0"
  >
    <div
      class="MuiScopedCssBaseline-root emotion-1"
    >
      <main
        class="auth-container main-container MuiBox-root emotion-2"
        data-commit="b9bbc0140703c3fbf0e2e58920362e70"
        data-version="0.0.0"
        dir="ltr"
        id="okta-sign-in"
        lang="en"
      >
        <div
          class="MuiScopedCssBaseline-root emotion-3"
        >
          <div
            class="MuiBox-root emotion-4"
          >
            <div
              class="MuiBox-root emotion-5"
            >
              <div
                class="okta-sign-in-header auth-header MuiBox-root emotion-6"
              >
                <h1
                  class="MuiTypography-root MuiTypography-h1 emotion-7"
                />
              </div>
              <div
                class="MuiBox-root emotion-8"
              >
                <form
                  class="o-form MuiBox-root emotion-9"
                  data-se="o-form"
                  novalidate=""
                >
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <div
                      class="MuiBox-root emotion-11"
                    >
                      <div
                        class="MuiBox-root emotion-12"
                      >
                        <h2
                          class="MuiTypography-root MuiTypography-h4 emotion-13"
                          data-se="o-form-head"
                          id="enroll-profile_Title_Sign_up_1"
                          tabindex="-1"
                        >
                          Sign up
                        </h2>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-11"
                    >
                      <div
                        class="MuiBox-root emotion-12"
                      >
                        <p
                          class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-16"
                          data-se="o-form-explain"
                          id="enroll-profile_Description_Fields_are_required_unless_marked_optional_2"
                        >
                          Fields are required unless marked optional.
                        </p>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-11"
                    >
                      <div
                        class="MuiBox-root emotion-2"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-19"
                          data-shrink="false"
                          for="userProfile.lastName"
                        >
                          Last name
                          <span
                            aria-hidden="true"
                            class="no-translate MuiBox-root emotion-20"
                          >
                            *
                          </span>
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth emotion-21"
                        >
                          <input
                            aria-invalid="false"
                            autocomplete="family-name"
                            class="MuiInputBase-input emotion-22"
                            data-se="userProfile.lastName"
                            id="userProfile.lastName"
                            name="userProfile.lastName"
                            type="text"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-11"
                    >
                      <div
                        class="MuiBox-root emotion-2"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-19"
                          data-shrink="false"
                          for="userProfile.firstName"
                        >
                          First name
                          <span
                            aria-hidden="true"
                            class="no-translate MuiBox-root emotion-20"
                          >
                            *
                          </span>
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth emotion-21"
                        >
                          <input
                            aria-invalid="false"
                            autocomplete="given-name"
                            class="MuiInputBase-input emotion-22"
                            data-se="userProfile.firstName"
                            id="userProfile.firstName"
                            name="userProfile.firstName"
                            type="text"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-11"
                    >
                      <div
                        class="MuiBox-root emotion-2"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-19"
                          data-shrink="false"
                          for="userProfile.email"
                        >
                          Email
                          <span
                            aria-hidden="true"
                            class="no-translate MuiBox-root emotion-20"
                          >
                            *
                          </span>
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth emotion-21"
                        >
                          <input
                            aria-invalid="false"
                            autocomplete="email"
                            class="MuiInputBase-input emotion-22"
                            data-se="userProfile.email"
                            id="userProfile.email"
                            inputmode="email"
                            name="userProfile.email"
                            type="text"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-11"
                    >
                      <div
                        class="MuiBox-root emotion-2"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-19"
                          data-shrink="false"
                          for="userProfile.login"
                        >
                          Username
                          <span
                            aria-hidden="true"
                            class="no-translate MuiBox-root emotion-20"
                          >
                            *
                          </span>
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth emotion-21"
                        >
                          <input
                            aria-invalid="false"
                            class="MuiInputBase-input emotion-22"
                            data-se="userProfile.login"
                            id="userProfile.login"
                            name="userProfile.login"
                            type="text"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-11"
                    >
                      <div
                        class="MuiBox-root emotion-2"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-19"
                          data-shrink="false"
                          for="userProfile.address"
                        >
                          Street Address
                          <span
                            aria-hidden="true"
                            class="no-translate MuiBox-root emotion-20"
                          >
                            *
                          </span>
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth emotion-21"
                        >
                          <input
                            aria-invalid="false"
                            class="MuiInputBase-input emotion-22"
                            data-se="userProfile.address"
                            id="userProfile.address"
                            name="userProfile.address"
                            type="text"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-11"
                    >
                      <button
                        class="MuiButtonBase-root MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth emotion-48"
                        data-type="save"
                        tabindex="0"
                        type="submit"
                      >
                        Sign Up
                      </button>
                    </div>
                    <div
                      class="MuiBox-root emotion-11"
                    >
                      <hr
                        class="MuiDivider-root MuiDivider-fullWidth separation-line emotion-50"
                      />
                    </div>
                    <div
                      class="MuiBox-root emotion-51"
                    >
                      <div
                        class="MuiBox-root emotion-52"
                      >
                        <div
                          class="MuiBox-root emotion-12"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-16"
                            data-se="haveaccount"
                            id="enroll-profile_Description_Already_have_an_account_11"
                          >
                            Already have an account?
                          </p>
                        </div>
                      </div>
                      <div
                        class="MuiBox-root emotion-52"
                      >
                        <button
                          class="MuiTypography-root MuiTypography-body1 MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-56"
                          data-se="back"
                          role="link"
                          type="button"
                        >
                          Sign In
                        </button>
                      </div>
                    </div>
                  </div>
                </form>
              </div>
            </div>
          </div>
        </div>
      </main>
    </div>
  </div>
</div>
`;

exports[`enroll-profile-with-password should show custom error message and prevent submission when failure is triggered in preSubmit callback 1`] = `
<div>
  <div
    class="MuiScopedCssBaseline-root emotion-0"
  >
    <div
      class="MuiScopedCssBaseline-root emotion-1"
    >
      <main
        class="auth-container main-container MuiBox-root emotion-2"
        data-commit="b9bbc0140703c3fbf0e2e58920362e70"
        data-version="0.0.0"
        dir="ltr"
        id="okta-sign-in"
        lang="en"
      >
        <div
          class="MuiScopedCssBaseline-root emotion-3"
        >
          <div
            class="MuiBox-root emotion-4"
          >
            <div
              class="MuiBox-root emotion-5"
            >
              <div
                class="okta-sign-in-header auth-header MuiBox-root emotion-6"
              >
                <h1
                  class="MuiTypography-root MuiTypography-h1 emotion-7"
                />
              </div>
              <div
                class="MuiBox-root emotion-8"
              >
                <form
                  class="o-form MuiBox-root emotion-9"
                  data-se="o-form"
                  novalidate=""
                >
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <div
                      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-calloutError MuiAlert-callout emotion-11"
                      role="alert"
                    >
                      <div
                        class="MuiAlert-icon emotion-12"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-13"
                          fill="none"
                          focusable="false"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M9.879 1.707a3 3 0 0 1 4.242 0l8.172 8.172a3 3 0 0 1 0 4.242l-8.172 8.172a3 3 0 0 1-4.242 0L1.707 14.12a3 3 0 0 1 0-4.242L9.88 1.707ZM12 13a1 1 0 0 1-1-1V7h2v5a1 1 0 0 1-1 1Zm0 1.75a1.25 1.25 0 1 0 0 2.5 1.25 1.25 0 0 0 0-2.5Z"
                            fill="currentColor"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </div>
                      <div
                        class="MuiAlert-message emotion-14"
                      >
                        <span
                          class="MuiBox-root emotion-15"
                        >
                          error
                        </span>
                        <div
                          class="MuiBox-root emotion-2"
                        >
                          This is my custom global message
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <div
                        class="MuiBox-root emotion-19"
                      >
                        <h2
                          class="MuiTypography-root MuiTypography-h4 emotion-20"
                          data-se="o-form-head"
                          id="enroll-profile_Title_Sign_up_1"
                          tabindex="-1"
                        >
                          Sign up
                        </h2>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <div
                        class="MuiBox-root emotion-19"
                      >
                        <p
                          class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-23"
                          data-se="o-form-explain"
                          id="enroll-profile_Description_Fields_are_required_unless_marked_optional_2"
                        >
                          Fields are required unless marked optional.
                        </p>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <div
                        class="MuiBox-root emotion-2"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-26"
                          data-shrink="false"
                          for="userProfile.lastName"
                        >
                          Last name
                          <span
                            aria-hidden="true"
                            class="no-translate MuiBox-root emotion-27"
                          >
                            *
                          </span>
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary Mui-error MuiInputBase-fullWidth emotion-28"
                        >
                          <input
                            aria-describedby=" userProfile.lastName-error  "
                            aria-invalid="true"
                            autocomplete="family-name"
                            class="MuiInputBase-input emotion-29"
                            data-se="userProfile.lastName"
                            id="userProfile.lastName"
                            name="userProfile.lastName"
                            type="text"
                          />
                        </div>
                        <div
                          class="MuiBox-root emotion-2"
                        >
                          <p
                            class="MuiFormHelperText-root Mui-error emotion-31"
                            data-se="userProfile.lastName-error"
                            id="userProfile.lastName-error"
                            role="alert"
                          >
                            Custom preSubmit error
                          </p>
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <div
                        class="MuiBox-root emotion-2"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-26"
                          data-shrink="false"
                          for="userProfile.firstName"
                        >
                          First name
                          <span
                            aria-hidden="true"
                            class="no-translate MuiBox-root emotion-27"
                          >
                            *
                          </span>
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth emotion-28"
                        >
                          <input
                            aria-invalid="false"
                            autocomplete="given-name"
                            class="MuiInputBase-input emotion-29"
                            data-se="userProfile.firstName"
                            id="userProfile.firstName"
                            name="userProfile.firstName"
                            type="text"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <div
                        class="MuiBox-root emotion-2"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-26"
                          data-shrink="false"
                          for="userProfile.email"
                        >
                          Email
                          <span
                            aria-hidden="true"
                            class="no-translate MuiBox-root emotion-27"
                          >
                            *
                          </span>
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth emotion-28"
                        >
                          <input
                            aria-invalid="false"
                            autocomplete="email"
                            class="MuiInputBase-input emotion-29"
                            data-se="userProfile.email"
                            id="userProfile.email"
                            inputmode="email"
                            name="userProfile.email"
                            type="text"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <div
                        class="MuiBox-root emotion-2"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-26"
                          data-shrink="false"
                          for="userProfile.login"
                        >
                          Username
                          <span
                            aria-hidden="true"
                            class="no-translate MuiBox-root emotion-27"
                          >
                            *
                          </span>
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth emotion-28"
                        >
                          <input
                            aria-invalid="false"
                            class="MuiInputBase-input emotion-29"
                            data-se="userProfile.login"
                            id="userProfile.login"
                            name="userProfile.login"
                            type="text"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <button
                        class="MuiButtonBase-root MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth emotion-51"
                        data-type="save"
                        tabindex="0"
                        type="submit"
                      >
                        Sign Up
                      </button>
                    </div>
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <hr
                        class="MuiDivider-root MuiDivider-fullWidth separation-line emotion-53"
                      />
                    </div>
                    <div
                      class="MuiBox-root emotion-54"
                    >
                      <div
                        class="MuiBox-root emotion-55"
                      >
                        <div
                          class="MuiBox-root emotion-19"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-23"
                            data-se="haveaccount"
                            id="enroll-profile_Description_Already_have_an_account_10"
                          >
                            Already have an account?
                          </p>
                        </div>
                      </div>
                      <div
                        class="MuiBox-root emotion-55"
                      >
                        <button
                          class="MuiTypography-root MuiTypography-body1 MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-59"
                          data-se="back"
                          role="link"
                          type="button"
                        >
                          Sign In
                        </button>
                      </div>
                    </div>
                  </div>
                </form>
              </div>
            </div>
          </div>
        </div>
      </main>
    </div>
  </div>
</div>
`;

exports[`enroll-profile-with-password should show custom field level error message and custom global message on page load 1`] = `
<div>
  <div
    class="MuiScopedCssBaseline-root emotion-0"
  >
    <div
      class="MuiScopedCssBaseline-root emotion-1"
    >
      <main
        class="auth-container main-container MuiBox-root emotion-2"
        data-commit="b9bbc0140703c3fbf0e2e58920362e70"
        data-version="0.0.0"
        dir="ltr"
        id="okta-sign-in"
        lang="en"
      >
        <div
          class="MuiScopedCssBaseline-root emotion-3"
        >
          <div
            class="MuiBox-root emotion-4"
          >
            <div
              class="MuiBox-root emotion-5"
            >
              <div
                class="okta-sign-in-header auth-header MuiBox-root emotion-6"
              >
                <h1
                  class="MuiTypography-root MuiTypography-h1 emotion-7"
                />
              </div>
              <div
                class="MuiBox-root emotion-8"
              >
                <form
                  class="o-form MuiBox-root emotion-9"
                  data-se="o-form"
                  novalidate=""
                >
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <div
                      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-calloutError MuiAlert-callout emotion-11"
                      role="alert"
                    >
                      <div
                        class="MuiAlert-icon emotion-12"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-13"
                          fill="none"
                          focusable="false"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M9.879 1.707a3 3 0 0 1 4.242 0l8.172 8.172a3 3 0 0 1 0 4.242l-8.172 8.172a3 3 0 0 1-4.242 0L1.707 14.12a3 3 0 0 1 0-4.242L9.88 1.707ZM12 13a1 1 0 0 1-1-1V7h2v5a1 1 0 0 1-1 1Zm0 1.75a1.25 1.25 0 1 0 0 2.5 1.25 1.25 0 0 0 0-2.5Z"
                            fill="currentColor"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </div>
                      <div
                        class="MuiAlert-message emotion-14"
                      >
                        <span
                          class="MuiBox-root emotion-15"
                        >
                          error
                        </span>
                        <div
                          class="MuiBox-root emotion-2"
                        >
                          This is my custom global message
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <div
                        class="MuiBox-root emotion-19"
                      >
                        <h2
                          class="MuiTypography-root MuiTypography-h4 emotion-20"
                          data-se="o-form-head"
                          id="enroll-profile_Title_Sign_up_1"
                          tabindex="-1"
                        >
                          Sign up
                        </h2>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <div
                        class="MuiBox-root emotion-19"
                      >
                        <p
                          class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-23"
                          data-se="o-form-explain"
                          id="enroll-profile_Description_Fields_are_required_unless_marked_optional_2"
                        >
                          Fields are required unless marked optional.
                        </p>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <div
                        class="MuiBox-root emotion-2"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-26"
                          data-shrink="false"
                          for="userProfile.lastName"
                        >
                          Last name
                          <span
                            aria-hidden="true"
                            class="no-translate MuiBox-root emotion-27"
                          >
                            *
                          </span>
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary Mui-error MuiInputBase-fullWidth emotion-28"
                        >
                          <input
                            aria-describedby=" userProfile.lastName-error  "
                            aria-invalid="true"
                            autocomplete="family-name"
                            class="MuiInputBase-input emotion-29"
                            data-se="userProfile.lastName"
                            id="userProfile.lastName"
                            name="userProfile.lastName"
                            type="text"
                          />
                        </div>
                        <div
                          class="MuiBox-root emotion-2"
                        >
                          <p
                            class="MuiFormHelperText-root Mui-error emotion-31"
                            data-se="userProfile.lastName-error"
                            id="userProfile.lastName-error"
                            role="alert"
                          >
                            Custom parseSchema error
                          </p>
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <div
                        class="MuiBox-root emotion-2"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-26"
                          data-shrink="false"
                          for="userProfile.firstName"
                        >
                          First name
                          <span
                            aria-hidden="true"
                            class="no-translate MuiBox-root emotion-27"
                          >
                            *
                          </span>
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth emotion-28"
                        >
                          <input
                            aria-invalid="false"
                            autocomplete="given-name"
                            class="MuiInputBase-input emotion-29"
                            data-se="userProfile.firstName"
                            id="userProfile.firstName"
                            name="userProfile.firstName"
                            type="text"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <div
                        class="MuiBox-root emotion-2"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-26"
                          data-shrink="false"
                          for="userProfile.email"
                        >
                          Email
                          <span
                            aria-hidden="true"
                            class="no-translate MuiBox-root emotion-27"
                          >
                            *
                          </span>
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth emotion-28"
                        >
                          <input
                            aria-invalid="false"
                            autocomplete="email"
                            class="MuiInputBase-input emotion-29"
                            data-se="userProfile.email"
                            id="userProfile.email"
                            inputmode="email"
                            name="userProfile.email"
                            type="text"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <div
                        class="MuiBox-root emotion-2"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-26"
                          data-shrink="false"
                          for="userProfile.login"
                        >
                          Username
                          <span
                            aria-hidden="true"
                            class="no-translate MuiBox-root emotion-27"
                          >
                            *
                          </span>
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth emotion-28"
                        >
                          <input
                            aria-invalid="false"
                            class="MuiInputBase-input emotion-29"
                            data-se="userProfile.login"
                            id="userProfile.login"
                            name="userProfile.login"
                            type="text"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <button
                        class="MuiButtonBase-root MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth emotion-51"
                        data-type="save"
                        tabindex="0"
                        type="submit"
                      >
                        Sign Up
                      </button>
                    </div>
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <hr
                        class="MuiDivider-root MuiDivider-fullWidth separation-line emotion-53"
                      />
                    </div>
                    <div
                      class="MuiBox-root emotion-54"
                    >
                      <div
                        class="MuiBox-root emotion-55"
                      >
                        <div
                          class="MuiBox-root emotion-19"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-23"
                            data-se="haveaccount"
                            id="enroll-profile_Description_Already_have_an_account_10"
                          >
                            Already have an account?
                          </p>
                        </div>
                      </div>
                      <div
                        class="MuiBox-root emotion-55"
                      >
                        <button
                          class="MuiTypography-root MuiTypography-body1 MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-59"
                          data-se="back"
                          role="link"
                          type="button"
                        >
                          Sign In
                        </button>
                      </div>
                    </div>
                  </div>
                </form>
              </div>
            </div>
          </div>
        </div>
      </main>
    </div>
  </div>
</div>
`;

exports[`enroll-profile-with-password should show generic error message and prevent updated view rendering when failure is triggered in postSubmit callback 1`] = `
<div>
  <div
    class="MuiScopedCssBaseline-root emotion-0"
  >
    <div
      class="MuiScopedCssBaseline-root emotion-1"
    >
      <main
        class="auth-container main-container MuiBox-root emotion-2"
        data-commit="b9bbc0140703c3fbf0e2e58920362e70"
        data-version="0.0.0"
        dir="ltr"
        id="okta-sign-in"
        lang="en"
      >
        <div
          class="MuiScopedCssBaseline-root emotion-3"
        >
          <div
            class="MuiBox-root emotion-4"
          >
            <div
              class="MuiBox-root emotion-5"
            >
              <div
                class="okta-sign-in-header auth-header MuiBox-root emotion-6"
              >
                <h1
                  class="MuiTypography-root MuiTypography-h1 emotion-7"
                />
              </div>
              <div
                class="MuiBox-root emotion-8"
              >
                <form
                  class="o-form MuiBox-root emotion-9"
                  data-se="o-form"
                  novalidate=""
                >
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <div
                      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-calloutError MuiAlert-callout emotion-11"
                      role="alert"
                    >
                      <div
                        class="MuiAlert-icon emotion-12"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-13"
                          fill="none"
                          focusable="false"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M9.879 1.707a3 3 0 0 1 4.242 0l8.172 8.172a3 3 0 0 1 0 4.242l-8.172 8.172a3 3 0 0 1-4.242 0L1.707 14.12a3 3 0 0 1 0-4.242L9.88 1.707ZM12 13a1 1 0 0 1-1-1V7h2v5a1 1 0 0 1-1 1Zm0 1.75a1.25 1.25 0 1 0 0 2.5 1.25 1.25 0 0 0 0-2.5Z"
                            fill="currentColor"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </div>
                      <div
                        class="MuiAlert-message emotion-14"
                      >
                        <span
                          class="MuiBox-root emotion-15"
                        >
                          error
                        </span>
                        <div
                          class="MuiBox-root emotion-2"
                        >
                          We could not process your registration at this time. Please try again later.
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <div
                        class="MuiBox-root emotion-19"
                      >
                        <h2
                          class="MuiTypography-root MuiTypography-h4 emotion-20"
                          data-se="o-form-head"
                          id="enroll-profile_Title_Sign_up_1"
                          tabindex="-1"
                        >
                          Sign up
                        </h2>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <div
                        class="MuiBox-root emotion-19"
                      >
                        <p
                          class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-23"
                          data-se="o-form-explain"
                          id="enroll-profile_Description_Fields_are_required_unless_marked_optional_2"
                        >
                          Fields are required unless marked optional.
                        </p>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <div
                        class="MuiBox-root emotion-2"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-26"
                          data-shrink="false"
                          for="userProfile.lastName"
                        >
                          Last name
                          <span
                            aria-hidden="true"
                            class="no-translate MuiBox-root emotion-27"
                          >
                            *
                          </span>
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth emotion-28"
                        >
                          <input
                            aria-invalid="false"
                            autocomplete="family-name"
                            class="MuiInputBase-input emotion-29"
                            data-se="userProfile.lastName"
                            id="userProfile.lastName"
                            name="userProfile.lastName"
                            type="text"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <div
                        class="MuiBox-root emotion-2"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-26"
                          data-shrink="false"
                          for="userProfile.firstName"
                        >
                          First name
                          <span
                            aria-hidden="true"
                            class="no-translate MuiBox-root emotion-27"
                          >
                            *
                          </span>
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth emotion-28"
                        >
                          <input
                            aria-invalid="false"
                            autocomplete="given-name"
                            class="MuiInputBase-input emotion-29"
                            data-se="userProfile.firstName"
                            id="userProfile.firstName"
                            name="userProfile.firstName"
                            type="text"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <div
                        class="MuiBox-root emotion-2"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-26"
                          data-shrink="false"
                          for="userProfile.email"
                        >
                          Email
                          <span
                            aria-hidden="true"
                            class="no-translate MuiBox-root emotion-27"
                          >
                            *
                          </span>
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth emotion-28"
                        >
                          <input
                            aria-invalid="false"
                            autocomplete="email"
                            class="MuiInputBase-input emotion-29"
                            data-se="userProfile.email"
                            id="userProfile.email"
                            inputmode="email"
                            name="userProfile.email"
                            type="text"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <div
                        class="MuiBox-root emotion-2"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-26"
                          data-shrink="false"
                          for="userProfile.login"
                        >
                          Username
                          <span
                            aria-hidden="true"
                            class="no-translate MuiBox-root emotion-27"
                          >
                            *
                          </span>
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth emotion-28"
                        >
                          <input
                            aria-invalid="false"
                            class="MuiInputBase-input emotion-29"
                            data-se="userProfile.login"
                            id="userProfile.login"
                            name="userProfile.login"
                            type="text"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <button
                        class="MuiButtonBase-root MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth emotion-49"
                        data-type="save"
                        tabindex="0"
                        type="submit"
                      >
                        Sign Up
                      </button>
                    </div>
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <hr
                        class="MuiDivider-root MuiDivider-fullWidth separation-line emotion-51"
                      />
                    </div>
                    <div
                      class="MuiBox-root emotion-52"
                    >
                      <div
                        class="MuiBox-root emotion-53"
                      >
                        <div
                          class="MuiBox-root emotion-19"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-23"
                            data-se="haveaccount"
                            id="enroll-profile_Description_Already_have_an_account_10"
                          >
                            Already have an account?
                          </p>
                        </div>
                      </div>
                      <div
                        class="MuiBox-root emotion-53"
                      >
                        <button
                          class="MuiTypography-root MuiTypography-body1 MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-57"
                          data-se="back"
                          role="link"
                          type="button"
                        >
                          Sign In
                        </button>
                      </div>
                    </div>
                  </div>
                </form>
              </div>
            </div>
          </div>
        </div>
      </main>
    </div>
  </div>
</div>
`;

exports[`enroll-profile-with-password should show validation error messages on all fields when submitted without completing required fields 1`] = `
<div>
  <div
    class="MuiScopedCssBaseline-root emotion-0"
  >
    <div
      class="MuiScopedCssBaseline-root emotion-1"
    >
      <main
        class="auth-container main-container MuiBox-root emotion-2"
        data-commit="b9bbc0140703c3fbf0e2e58920362e70"
        data-version="0.0.0"
        dir="ltr"
        id="okta-sign-in"
        lang="en"
      >
        <div
          class="MuiScopedCssBaseline-root emotion-3"
        >
          <div
            class="MuiBox-root emotion-4"
          >
            <div
              class="MuiBox-root emotion-5"
            >
              <div
                class="okta-sign-in-header auth-header MuiBox-root emotion-6"
              >
                <h1
                  class="MuiTypography-root MuiTypography-h1 emotion-7"
                />
              </div>
              <div
                class="MuiBox-root emotion-8"
              >
                <form
                  class="o-form MuiBox-root emotion-9"
                  data-se="o-form"
                  novalidate=""
                >
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <div
                      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-calloutError MuiAlert-callout emotion-11"
                      role="alert"
                    >
                      <div
                        class="MuiAlert-icon emotion-12"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-13"
                          fill="none"
                          focusable="false"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M9.879 1.707a3 3 0 0 1 4.242 0l8.172 8.172a3 3 0 0 1 0 4.242l-8.172 8.172a3 3 0 0 1-4.242 0L1.707 14.12a3 3 0 0 1 0-4.242L9.88 1.707ZM12 13a1 1 0 0 1-1-1V7h2v5a1 1 0 0 1-1 1Zm0 1.75a1.25 1.25 0 1 0 0 2.5 1.25 1.25 0 0 0 0-2.5Z"
                            fill="currentColor"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </div>
                      <div
                        class="MuiAlert-message emotion-14"
                      >
                        <span
                          class="MuiBox-root emotion-15"
                        >
                          error
                        </span>
                        <div
                          class="MuiBox-root emotion-2"
                        >
                          We found some errors. Please review the form and make corrections.
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <div
                        class="MuiBox-root emotion-19"
                      >
                        <h2
                          class="MuiTypography-root MuiTypography-h4 emotion-20"
                          data-se="o-form-head"
                          id="enroll-profile_Title_Sign_up_1"
                          tabindex="-1"
                        >
                          Sign up
                        </h2>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <div
                        class="MuiBox-root emotion-19"
                      >
                        <p
                          class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-23"
                          data-se="o-form-explain"
                          id="enroll-profile_Description_Fields_are_required_unless_marked_optional_2"
                        >
                          Fields are required unless marked optional.
                        </p>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <div
                        class="MuiBox-root emotion-2"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-26"
                          data-shrink="false"
                          for="userProfile.lastName"
                        >
                          Last name
                          <span
                            aria-hidden="true"
                            class="no-translate MuiBox-root emotion-27"
                          >
                            *
                          </span>
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary Mui-error MuiInputBase-fullWidth emotion-28"
                        >
                          <input
                            aria-describedby=" userProfile.lastName-error  "
                            aria-invalid="true"
                            autocomplete="family-name"
                            class="MuiInputBase-input emotion-29"
                            data-se="userProfile.lastName"
                            id="userProfile.lastName"
                            name="userProfile.lastName"
                            type="text"
                          />
                        </div>
                        <div
                          class="MuiBox-root emotion-2"
                        >
                          <p
                            class="MuiFormHelperText-root Mui-error emotion-31"
                            data-se="userProfile.lastName-error"
                            id="userProfile.lastName-error"
                            role="alert"
                          >
                            This field cannot be left blank
                          </p>
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <div
                        class="MuiBox-root emotion-2"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-26"
                          data-shrink="false"
                          for="userProfile.firstName"
                        >
                          First name
                          <span
                            aria-hidden="true"
                            class="no-translate MuiBox-root emotion-27"
                          >
                            *
                          </span>
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary Mui-error MuiInputBase-fullWidth emotion-28"
                        >
                          <input
                            aria-describedby=" userProfile.firstName-error  "
                            aria-invalid="true"
                            autocomplete="given-name"
                            class="MuiInputBase-input emotion-29"
                            data-se="userProfile.firstName"
                            id="userProfile.firstName"
                            name="userProfile.firstName"
                            type="text"
                          />
                        </div>
                        <div
                          class="MuiBox-root emotion-2"
                        >
                          <p
                            class="MuiFormHelperText-root Mui-error emotion-31"
                            data-se="userProfile.firstName-error"
                            id="userProfile.firstName-error"
                            role="alert"
                          >
                            This field cannot be left blank
                          </p>
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <div
                        class="MuiBox-root emotion-2"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-26"
                          data-shrink="false"
                          for="userProfile.email"
                        >
                          Email
                          <span
                            aria-hidden="true"
                            class="no-translate MuiBox-root emotion-27"
                          >
                            *
                          </span>
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary Mui-error MuiInputBase-fullWidth emotion-28"
                        >
                          <input
                            aria-describedby=" userProfile.email-error  "
                            aria-invalid="true"
                            autocomplete="email"
                            class="MuiInputBase-input emotion-29"
                            data-se="userProfile.email"
                            id="userProfile.email"
                            inputmode="email"
                            name="userProfile.email"
                            type="text"
                          />
                        </div>
                        <div
                          class="MuiBox-root emotion-2"
                        >
                          <p
                            class="MuiFormHelperText-root Mui-error emotion-31"
                            data-se="userProfile.email-error"
                            id="userProfile.email-error"
                            role="alert"
                          >
                            This field cannot be left blank
                          </p>
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <div
                        class="MuiBox-root emotion-2"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-26"
                          data-shrink="false"
                          for="userProfile.login"
                        >
                          Username
                          <span
                            aria-hidden="true"
                            class="no-translate MuiBox-root emotion-27"
                          >
                            *
                          </span>
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary Mui-error MuiInputBase-fullWidth emotion-28"
                        >
                          <input
                            aria-describedby=" userProfile.login-error  "
                            aria-invalid="true"
                            class="MuiInputBase-input emotion-29"
                            data-se="userProfile.login"
                            id="userProfile.login"
                            name="userProfile.login"
                            type="text"
                          />
                        </div>
                        <div
                          class="MuiBox-root emotion-2"
                        >
                          <p
                            class="MuiFormHelperText-root Mui-error emotion-31"
                            data-se="userProfile.login-error"
                            id="userProfile.login-error"
                            role="alert"
                          >
                            This field cannot be left blank
                          </p>
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <div
                        class="MuiBox-root emotion-2"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-26"
                          data-shrink="false"
                          for="userProfile.address"
                        >
                          Street Address
                          <span
                            aria-hidden="true"
                            class="no-translate MuiBox-root emotion-27"
                          >
                            *
                          </span>
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary Mui-error MuiInputBase-fullWidth emotion-28"
                        >
                          <input
                            aria-describedby=" userProfile.address-error  "
                            aria-invalid="true"
                            class="MuiInputBase-input emotion-29"
                            data-se="userProfile.address"
                            id="userProfile.address"
                            name="userProfile.address"
                            type="text"
                          />
                        </div>
                        <div
                          class="MuiBox-root emotion-2"
                        >
                          <p
                            class="MuiFormHelperText-root Mui-error emotion-31"
                            data-se="userProfile.address-error"
                            id="userProfile.address-error"
                            role="alert"
                          >
                            This field cannot be left blank
                          </p>
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <button
                        class="MuiButtonBase-root MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth emotion-65"
                        data-type="save"
                        tabindex="0"
                        type="submit"
                      >
                        Sign Up
                      </button>
                    </div>
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <hr
                        class="MuiDivider-root MuiDivider-fullWidth separation-line emotion-67"
                      />
                    </div>
                    <div
                      class="MuiBox-root emotion-68"
                    >
                      <div
                        class="MuiBox-root emotion-69"
                      >
                        <div
                          class="MuiBox-root emotion-19"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-23"
                            data-se="haveaccount"
                            id="enroll-profile_Description_Already_have_an_account_11"
                          >
                            Already have an account?
                          </p>
                        </div>
                      </div>
                      <div
                        class="MuiBox-root emotion-69"
                      >
                        <button
                          class="MuiTypography-root MuiTypography-body1 MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-73"
                          data-se="back"
                          role="link"
                          type="button"
                        >
                          Sign In
                        </button>
                      </div>
                    </div>
                  </div>
                </form>
              </div>
            </div>
          </div>
        </div>
      </main>
    </div>
  </div>
</div>
`;
